# amazon-creatorsapi-python-sdk

./: CHANGELOG.md  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish-to-pypi.yml
creatorsapi_python_sdk/: __init__.py
examples/: sample_get_browse_nodes.py  sample_get_feed.py  sample_get_items.py  sample_get_report.py  sample_get_variations.py  sample_list_feeds.py  sample_list_reports.py  sample_search_items.py
tests/: test_api_client.py  test_configuration.py  test_models.py
