[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amazon-creatorsapi-python-sdk"
version = "1.0.0"
description = "Amazon Creators API Python SDK (Official)"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache License 2.0"}
authors = [
    {name = "Amazon"}
]
keywords = ["amazon", "creators", "api", "sdk", "product", "advertising", "associate"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "python-dateutil>=2.5.3",
    "setuptools>=21.0.0",
    "urllib3>=1.25.3,<2.1.0",
    "pydantic>=2",
    "typing-extensions>=4.7.1",
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/RajpurohitHitesh/amazon-creatorsapi-python-sdk"
Repository = "https://github.com/RajpurohitHitesh/amazon-creatorsapi-python-sdk"
